# OpenGL-Testing

./: CMakeLists.txt  glfwGameTest.sublime-project
cmake/: FindGLFW.cmake
engine/: CMakeLists.txt
engine/include/GampyCPP/: All  Clock  Window
engine/include/GampyCPP/Math/: Vector
engine/src/: All.hpp  clock.cpp  clock.hpp  config.h.in  renderelement.cpp  renderelement.hpp  shader.cpp  shader.hpp  utils.hpp  window.cpp  window.hpp
engine/src/math/: vector2d.hpp  vector2d.inl
games/: CMakeLists.txt
games/JamieKingDing/: CMakeLists.txt  main.cpp
games/Sandbox/: CMakeLists.txt
games/Sandbox/src/: main.cpp
res/shaders/: changer.fs  changer.vs  simple.vs  simple2d.vs
src/: config.h.in  main.cpp  objects.hpp  renderelement.cpp  renderelement.hpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp  window.cpp  window.hpp
test/: CMakeLists.txt
test/testEngineMath/: CMakeLists.txt  testvector2d.cpp
test/testengine/: CMakeLists.txt  testclock.cpp  testvector2d.cpp
test/testwindow/: CMakeLists.txt  main.cpp
